k8s/digitalbank/deployment-bank.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: digital-bank-deployment
  namespace: digibank
  labels:
    app: digital-bank
spec:
  replicas: 1
  selector:
    matchLabels:
      app: digital-bank
  template:
    metadata:
      labels:
        app: digital-bank
    spec:
      containers:
      - name: digital-bank
        image: digisic/digitalbank:latest
        resources:
          requests:
            memory: "256M"
            cpu: "250m"
          limits:
            memory: "512M"
            cpu: "500m"
        ports:
          - name: db-bank-port
            containerPort: 8080  
---

apiVersion: v1
kind: Service
metadata:
  name: digital-bank-svc
  namespace: digibank
spec:
  selector:
    app: digital-bank
  ports:
    - name: http
      port: 8080  
      targetPort:  db-bank-port
